--- a/root/index.html
+++ b/root/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- head definitions go here -->
+        Hello World.
     </head>
     <body>
-        <!-- the content goes here -->
+        Welcome to the machine. 
     </body>
 </html>
