--- a/root/index.html
+++ b/root/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        Hello World.
+        <title>Hellow World </title>
     </head>
     <body>
-        Welcome to the machine. 
+        <p>Welcome to the machine. </p>
     </body>
 </html>
