--- a/index.html
+++ b/index.html
@@ -36,4 +36,10 @@
         </ul>
     </div>
 </body>
+<!DOCTYPE html>
+<!-- ... (Rest of the HTML content) ... -->
+<body>
+    <!-- ... (Rest of the HTML content) ... -->
+    <script src="dist/app.js"></script>
+</body>
 </html>
